# HyperAgent

./: .env.example  .gitignore  Arreter-App.cmd  Dockerfile  Lancer-App.cmd  README.md  docker-compose.yml  llm_checks.py  llm_schemas.py  prompt_risk_review.md  prompt_strategist.md  prompt_trader.md  pyproject.toml  test_llm_layer.py
.github/workflows/: ci.yml
agent/: __init__.py  activation.py  api.py  config.py  consequence.py  db.py  decision.py  domain.py  execution.py  graph.py  guardrails.py  history.py  hyperliquid.py  hyperliquid_execution.py  instruments.py  llm_observability.py  market.py  protection.py  repository.py  research.py  scheduler.py  service.py  strategies.py  symbols.py
docs/diagrams/: README.md  hyperagent-architecture.puml  plantuml-agent-flow.puml  plantuml-backend-topology.puml  plantuml-reliability-lifecycle.puml  render.ps1
docs/m0/: ARCHITECTURE.md  GATE.md
frontend/: components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActivationSettings.tsx  AgentControlDeck.tsx  AgentWorkspace.tsx  DecisionPipeline.tsx  GrokIntelligenceMap.tsx  Hip3MarketsPanel.tsx  PnlChart.tsx  PositionChart.tsx  PositionsPanel.tsx  TradeHistoryPanel.tsx
tests/: test_activation.py  test_agent.py  test_consequence_v2.py  test_conviction_observability.py  test_hyperliquid.py  test_hyperliquid_execution.py  test_instruments.py  test_llm_observability.py  test_scheduler.py  test_trade_history.py
tests/fixtures/: hip3_xyz_info.json
(+4 files in other folders)
