[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-agent-reliability"
version = "0.1.0"
description = "Reliability-first LangGraph trading agent and operations dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "hyperliquid-python-sdk>=0.23,<0.24",
  "langgraph>=1.1,<2",
  "openai>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.15,<0.16",
]

[tool.setuptools]
py-modules = ["llm_checks", "llm_schemas"]

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
